version/0.4.0b1/_sources/api/ansys/sam/sysml2/meta_model/requirement_verification_membership/RequirementVerificationMembership.rst.txt






:class:`RequirementVerificationMembership`
==========================================


.. py:class:: ansys.sam.sysml2.meta_model.requirement_verification_membership.RequirementVerificationMembership(element_id: str)

   Bases: :py:obj:`ansys.sam.sysml2.meta_model.requirement_constraint_membership.RequirementConstraintMembership`


   
   Java class 'com.ansys.metamodel.sysml2.RequirementVerificationMembership'.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: RequirementVerificationMembership

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~owned_requirement`
            - Get the owned requirement property.
          * - :py:attr:`~verified_requirement`
            - Get the verified requirement property.







Import detail
-------------

.. code-block:: python

    from ansys.sam.sysml2.meta_model.requirement_verification_membership import RequirementVerificationMembership

Property detail
---------------

.. py:property:: owned_requirement
   :type: RequirementUsage


   
   Get the owned requirement property.





   :Returns:

       "RequirementUsage"
           Value of property owned requirement.











   ..
       !! processed by numpydoc !!

.. py:property:: verified_requirement
   :type: RequirementUsage


   
   Get the verified requirement property.





   :Returns:

       "RequirementUsage"
           Value of property verified requirement.











   ..
       !! processed by numpydoc !!






